package seedu.duke.command;

public class CommandTag {
    //@@author wcwy
    public static final String COMMAND_TAG_TRANSACTION_TYPE = "t/";
    public static final String COMMAND_TAG_TRANSACTION_CATEGORY = "c/";
    public static final String COMMAND_TAG_TRANSACTION_AMOUNT = "a/";
    public static final String COMMAND_TAG_TRANSACTION_DATE = "d/";
    public static final String COMMAND_TAG_TRANSACTION_DESCRIPTION = "i/";
    public static final String COMMAND_TAG_GLOBAL_ENTRY_NUMBER = "e/";
    public static final String COMMAND_TAG_GLOBAL_MONTH = "m/";
    public static final String COMMAND_TAG_GLOBAL_YEAR = "y/";
    public static final String COMMAND_TAG_GLOBAL_NUMBER = "n/";
    public static final String COMMAND_TAG_GLOBAL_PERIOD = "p/";
    public static final String COMMAND_TAG_FIND_KEYWORD = "k/";
    public static final String COMMAND_TAG_HELP_OPTION = "o/";
    public static final String COMMAND_TAG_HELP_QUERY = "q/";
    public static final String COMMAND_TAG_STATS_TYPE = "s/";
    public static final String COMMAND_TAG_BUDGET_AMOUNT = "b/";
}